<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GPSAPlant">

    <TextView
        android:id="@+id/lblLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblLatitude" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/yellowgreenbevel"
        android:onClick="btnPauseClicked"
        android:text="@string/lblPause" />

    <TextView
        android:id="@+id/lblLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLatitude"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblLongitude" />

    <TextView
        android:id="@+id/lblLatitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblLongitude"
        android:layout_toEndOf="@+id/lblLongitude"
        android:layout_toRightOf="@+id/lblLongitude"
        android:paddingLeft="2dp"
        android:text="@string/lblZero" />

    <TextView
        android:id="@+id/lblLongitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblLongitude"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_toEndOf="@+id/lblLongitude"
        android:layout_toRightOf="@+id/lblLongitude"
        android:paddingLeft="2dp"
        android:text="@string/lblZero" />

    <TextView
        android:id="@+id/lblGPSAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLongitude"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblGPSAge" />

    <Chronometer
        android:id="@+id/chrGPSAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblGPSAge"
        android:layout_toEndOf="@+id/lblLongitude"
        android:layout_toRightOf="@+id/lblLongitude"
        android:paddingLeft="2dp" />

    <TextView
        android:id="@+id/lblPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/actPlantName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblPlantName" />

    <AutoCompleteTextView
        android:id="@+id/actPlantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPause"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/lblPlantName"
        android:text="@string/lblBlank" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblDescription"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnShowSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblPlantName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@drawable/yellowgreenbevel"
            android:onClick="btnShowSavedClicked"
            android:text="@string/lblShowSaved" />

        <Button
            android:id="@+id/btnTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/actPlantName"
            android:layout_alignRight="@+id/actPlantName"
            android:layout_alignBottom="@+id/btnShowSaved"
            android:layout_weight="1"
            android:background="@drawable/yellowgreenbevel"
            android:onClick="btnTakePhotoClicked"
            android:text="@string/lblTakePhoto" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/yellowgreenbevel"
        android:onClick="onSaveClicked"
        android:text="@string/lblSave" />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/actDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/lblDescription" />

    <AutoCompleteTextView
        android:id="@+id/actDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actLocation"
        android:layout_alignEnd="@+id/btnPause"
        android:layout_alignRight="@+id/btnPause"
        android:layout_toEndOf="@+id/lblDescription"
        android:layout_toRightOf="@+id/lblDescription"
        android:text="@string/lblBlank" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/lblGPSAge"
        android:layout_alignRight="@+id/lblGPSAge"
        android:layout_alignBottom="@+id/actLocation"
        android:text="@string/lblLocation" />

    <AutoCompleteTextView
        android:id="@+id/actLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actPlantName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:text="@string/lblBlank" />

    <ImageView
        android:id="@+id/imgSpecimenPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSave"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignEnd="@+id/btnSave"
        android:layout_alignRight="@+id/btnSave"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
